# griptape-nodes

./: .codecov.yml  .env.example  .gitignore  .mcp.json  .mdformatignore  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MIGRATION.md  Makefile  PROFILING.md  ParameterButton_Implementation_Plan.md  README.md  analyze_profile.py  control_flow_test.py  convert.py  entrypoint.sh  event_schemas.json  griptape_output.txt  info.md  install.ps1  install.sh  local_executor_test.py  loop_subflow_implementation.py  mkdocs.yml  no_control_flow_test.py  node-analysis-check.md  node-development-guide.md  ollama.py  pyproject.toml  stable-diff-nodes.md  test.py  test_executor.py  test_media_library_execute.py  testing.py  two_agent_workflow.py
.claude/: CLAUDE.local.md  settings.json
.github/: dependabot.yml  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  node_request.yml
.github/workflows/: claude-code-review.yml  claude-issue-triage.yml  claude-pr-triage.yml  claude.yml  code-checks.yml  latest-release.yml  latest-tag.yml  nightly-release.yml  publish.yml  release-drafter.yml  release.yml  stable-release.yml  sync-libraries.yml  tests.yml  unit-tests.yml  version-bump-on-release.yml  workflow-tests.yml
GriptapeNodes2/: workflow.py
docs/: command_line_interface.md  configuration.md  event_request_batch_handoff.md  faq.md  for_agents.md  getting_started.md  glossary.md  index.md  installation.md  libraries-2.0.md  libraries.md  mkdocs.yaml  permissions.md  pydantic_ai_spike.html  retained_mode.md  setup.md  uninstall.md  video_expression_system_design.md
docs/custom_nodes/: index.md
docs/developing_nodes/: comprehensive_guide.md  example_control_node.py  getting_started.md  index.md  node_isolation_with_workers.md  strict_mode.md  worker_mode.md
docs/frontend/: file_system_picker_allow_create.md
docs/ftue/: FTUE.md
docs/how_to/: debug_workflows_w_bootstrapper.md  developing_nodes.md  making_custom_nodes.md  making_custom_scripts.md  openai_api_key.md  setup_external_resources.md
docs/nodes/: overview.md
docs/projects/: customization.md  directories.md  environment.md  file_extension_macros.md  index.md  macros.md  projects.md  sequences.md  situations.md  workspace.md
docs/reference/: command_line_interface.md  glossary.md  openai_api_key.md  retained_mode.md
kate_scripts/: for_loop.py
libraries/griptape_cloud/: CONTRIBUTING.md  griptape_nodes_library.json
libraries/griptape_nodes_advanced_library/: griptape_nodes_library.json
libraries/griptape_nodes_advanced_media_library/: CONTRIBUTING.md  __init__.py  advanced_library.py  caching_benchmark.py  caching_main.py  flux_multi_gpu.py  fp8_analyze_attention.py  fp8_benchmark.py  fp8_convert.py  fp8_elementwise_benchmark.py  fp8_export.py  fp8_load.py  fp8_main.py  fp8_ops.py  fp8_profile.py  fp8_verify.py  griptape_nodes_advanced_media_library_advanced.py  griptape_nodes_library.json  pyproject.toml  requirements.txt  simple_torch_compile_test.py  test_model_sharding.py  test_node_loading.py  test_node_loading.sh  torch_compile_benchmark.py  torch_compile_optimizer.py
libraries/griptape_nodes_library/: CONTRIBUTING.md  NOTICE  PROXY_MIGRATION.md  griptape_nodes_library.json  pyproject.toml
nodes/: griptape_nodes_library.json
nodes/diffusers_nodes_library/: flux_pipeline.py  tiling_flux_img_2_img_pipeline.py
nodes/griptape_nodes_library/: agent.py  comfy_nodes.py  create_dict.py  create_image.py  create_string.py  dyna_node.py  end_flow.py  kate_test_1.py  kate_test_2.py  key_value_pair.py  load_image.py  load_text.py  merge_dict.py  merge_texts.py  note.py  save_text.py  simple_agent.py  start_flow.py  string_list.py  test_node.py  utilities.py
nodes/pillow_nodes_library/: __init__.py  rescale_image.py  utils.py
nodes/spandrel_nodes_library/: __init__.py  tiling_span.py  utils.py
scripts/: coloring_book.py  comfyui_flow_branch.py  convert_workflow_to_template.py  prompt_an_image.py  render_logs.py  spike_agent_manager.py  spike_pydantic_ai_agent.py  spike_pydantic_ai_workspace.py
src/griptape_nodes/: __init__.py  __main__.py  executor.py  profiler.py
src/traits/: trait_registry.py
tests/benchmarks/: conftest.py  test_flush.py  test_handle_request.py  test_node_parameters.py  test_object_manager.py  test_singleton_access.py
tests/e2e/: test_headless_deferred_imports.py  test_standalone_workflow_execution.py  test_subflow_execution.py
tests/integration/: conftest.py
tests/unit/: conftest.py  mocks.py  test_add_text_to_existing_image.py
tests/workflows/: test_workflows.py
traits/: add_button.py  add_param_button.py  button.py  clamp.py  compare.py  minmax.py  modeltrait.py  options.py  slider.py  trait_registry.py
workflows/: coloring_book.py  compare_prompts.py  prompt_an_image.py  translator.py
workflows/templates/: __init__.py  compare_prompts.py  coordinating_agents.py  photography_team.py  render_logs.py  (+2 more)
(+2205 files in other folders)
