[project]
name = "griptape_nodes"
version = "0.3.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "griptape[drivers-prompt-anthropic,loaders-image]>=1.5.0",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
  "xdg-base-dirs>=6.0.2",
  "pydantic-settings>=2.8.1",
  "httpx>=0.28.0,<1.0.0",
  "cohere>=5.14.0",
  "websockets>=15.0.1,<16.0.0",
]

[dependency-groups]
dev = ["mdformat>=0.7.22", "pyright>=1.1.396", "ruff>=0.11.0", "typos>=1.30.2"]
docs = ["mkdocs-material>=9.6.9", "mkdocs>=1.5.2"]
test = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "pytest-xdist>=3.6.1"]

[project.scripts]
griptape-nodes = "griptape_nodes:main"
gtn = "griptape_nodes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.uv.sources]
griptape = { git = "https://github.com/griptape-ai/griptape.git", branch = "main" }

[tool.ruff.format]
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD003",  # Intentional
  "FIX002", # Intentional
  "D101",   # Intentional
  "D102",   # Intentional
  "D103",   # Too hard
  "D106",   # Too hard
  "D107",   # Intentional
  "A004",   # Intentional
  "ANN001", # TODO(griptape): add type annotations to function arguments
  "ANN002", # Intentional
  "ANN003", # Intentional
  "ANN401", # Intentional
  "COM812", # Intentional
  "E501",   # TODO(griptape): break up long strings
  "D100",   # TODO(griptape): document public modules
  "BLE001", # TODO(griptape): too hard
  "B026",   # TODO(griptape): discuss with team
  "SLF001", # TODO(griptape): discuss with team
  "SIM108", # Intentional
  "SIM110", # Intentional
  "D105",   # Intentional
  "N999",   # TODO(griptape): discuss with team
  "N802",   # TODO(griptape): discuss with team
  "TRY002", # TODO(griptape): discuss with team
  "RUF012", # TODO(griptape): discuss with team
  "FBT003", # Intentional
  "RET504", # Intentional
  "T201",   # TODO(griptape): replace prints with logs before removing
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D104"]
"nodes/tests/*" = ["S101", "D104"]
"scripts/*" = ["ERA001"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
pythonVersion = "3.13"
